[package]
name = "decipede"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
panic = "abort"

[dependencies]
bevy = "0.10"
bevy_ecss = "0.3.0"
log = "0.4.17"
rand = "0.8.5"
